--- a/site/mainsite.html
+++ b/site/mainsite.html
@@ -19,10 +19,80 @@
       <a href="/site/mainsite.html">Haupt</a>
       <a href="/site/aktuelles.html">Aktuelles</a>
     </nav>
+    <main class="main">
+      <center><h1 class="Über">Artikel</h1></center>
+      <div class="htext">
+        <article>
+          <center><h2 class="arthead">Artikel 1</h2></center>
+          <p id="Artikel">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga
+            aspernatur omnis magni, adipisci possimus quibusdam sit autem quam
+            voluptate nulla laudantium, doloribus voluptatum incidunt aliquam
+            error neque. Fugit, culpa? Nihil nesciunt necessitatibus obcaecati,
+            corporis sequi tenetur quos laborum recusandae incidunt omnis
+            dolorem soluta ut facilis laudantium aliquid eveniet repellat eaque
+            porro architecto, ad, consectetur aliquam dolore ipsam vel?
+            Asperiores. Illum molestias maiores amet error explicabo,
+            voluptatibus id ratione nemo animi iusto? Non modi, quibusdam
+            reiciendis nostrum sit est blanditiis voluptatum laudantium
+            voluptatem minima, autem ex dolore minus. Qui, aspernatur? Error
+            cupiditate, sed provident dicta distinctio quaerat rem ipsam dolorem
+            porro! Maiores eos hic veritatis incidunt eveniet nostrum facilis
+            eligendi sed? Reprehenderit laboriosam ut deserunt a commodi facere
+            assumenda id. Accusantium odit unde fugit. Magnam nemo expedita a
+            fugit delectus deserunt doloribus sed quo quia alias ipsum
+            voluptatem debitis consectetur necessitatibus dolores, labore
+            voluptatibus laborum explicabo, sapiente architecto libero totam.
+          </p>
+          <center><h2 class="arthead" id="arthead2">Artikel 2</h2></center>
+          <p id="Artikel2">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga
+            aspernatur omnis magni, adipisci possimus quibusdam sit autem quam
+            voluptate nulla laudantium, doloribus voluptatum incidunt aliquam
+            error neque. Fugit, culpa? Nihil nesciunt necessitatibus obcaecati,
+            corporis sequi tenetur quos laborum recusandae incidunt omnis
+            dolorem soluta ut facilis laudantium aliquid eveniet repellat eaque
+            porro architecto, ad, consectetur aliquam dolore ipsam vel?
+            Asperiores. Illum molestias maiores amet error explicabo,
+            voluptatibus id ratione nemo animi iusto? Non modi, quibusdam
+            reiciendis nostrum sit est blanditiis voluptatum laudantium
+            voluptatem minima, autem ex dolore minus. Qui, aspernatur? Error
+            cupiditate, sed provident dicta distinctio quaerat rem ipsam dolorem
+            porro! Maiores eos hic veritatis incidunt eveniet nostrum facilis
+            eligendi sed? Reprehenderit laboriosam ut deserunt a commodi facere
+            assumenda id. Accusantium odit unde fugit. Magnam nemo expedita a
+            fugit delectus deserunt doloribus sed quo quia alias ipsum
+            voluptatem debitis consectetur necessitatibus dolores, labore
+            voluptatibus laborum explicabo, sapiente architecto libero totam.
+          </p>
+          <center><h2 class="arthead" id="arthead3">Artikel 3</h2></center>
+          <p id="Artikel3">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga
+            aspernatur omnis magni, adipisci possimus quibusdam sit autem quam
+            voluptate nulla laudantium, doloribus voluptatum incidunt aliquam
+            error neque. Fugit, culpa? Nihil nesciunt necessitatibus obcaecati,
+            corporis sequi tenetur quos laborum recusandae incidunt omnis
+            dolorem soluta ut facilis laudantium aliquid eveniet repellat eaque
+            porro architecto, ad, consectetur aliquam dolore ipsam vel?
+            Asperiores. Illum molestias maiores amet error explicabo,
+            voluptatibus id ratione nemo animi iusto? Non modi, quibusdam
+            reiciendis nostrum sit est blanditiis voluptatum laudantium
+            voluptatem minima, autem ex dolore minus. Qui, aspernatur? Error
+            cupiditate, sed provident dicta distinctio quaerat rem ipsam dolorem
+            porro! Maiores eos hic veritatis incidunt eveniet nostrum facilis
+            eligendi sed? Reprehenderit laboriosam ut deserunt a commodi facere
+            assumenda id. Accusantium odit unde fugit. Magnam nemo expedita a
+            fugit delectus deserunt doloribus sed quo quia alias ipsum
+            voluptatem debitis consectetur necessitatibus dolores, labore
+            voluptatibus laborum explicabo, sapiente architecto libero totam.
+          </p>
+        </article>
+      </div>
+    </main>
 
-    <footer>
-      <nav class="fotnav">
-        <a href="">Impressum</a>
+    <footer class="fotnav">
+      <nav>
+        <a href="/site/impresum.html">Impressum</a>
         <a href="">Kontakt</a>
       </nav>
     </footer>
