--- a/site/aktuelles.html
+++ b/site/aktuelles.html
@@ -4,7 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aktuelles</title>
+    <link rel="stylesheet" type="text/css" href="styleimp.css" media="screen" />
+    <title>Site</title>
   </head>
-  <body></body>
+  <body>
+    <center>
+      <img
+        src="https://dewey.tailorbrands.com/production/brand_version_mockup_image/427/7857029427_75b0c7f5-7cc1-40bc-86e4-add9a6c82560.png?cb=1665758900"
+        alt="logo"
+        class="logo"
+      />
+    </center>
+    <nav class="topnav">
+      <a href="/site/mainsite.html">Haupt</a>
+      <a href="/site/aktuelles.html">Aktuelles</a>
+    </nav>
+
+    <footer class="fotnav">
+      <nav>
+        <a href="/site/impresum.html">Impressum</a>
+        <a href="">Kontakt</a>
+      </nav>
+    </footer>
+  </body>
 </html>
