--- a/site/mainsite.html
+++ b/site/mainsite.html
@@ -19,12 +19,35 @@
       <a href="/site/mainsite.html">Haupt</a>
       <a href="/site/aktuelles.html">Aktuelles</a>
     </nav>
+    <div>
+      <a href="/site/anmeldung.html"
+        ><button class="login">Newsletter Anmeldung</button></a
+      >
+    </div>
     <main class="main">
       <center><h1 class="Über">Artikel</h1></center>
       <div class="htext">
         <article>
-          <center><h2 class="arthead">Artikel 1</h2></center>
-          <p id="Artikel">
+          <center><h2 class="arthead" id="arthead1">Artikel 1</h2></center>
+          <p id="Artikel" class="artikel">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga
+            aspernatur omnis magni, adipisci possimus quibusdam sit autem quam
+            voluptate nulla laudantium, doloribus voluptatum incidunt aliquam
+            error neque. Fugit, culpa? Nihil nesciunt necessitatibus obcaecati,
+            corporis sequi tenetur quos laborum recusandae incidunt omnis
+            dolorem soluta ut facilis laudantium aliquid eveniet repellat eaque
+            porro architecto, ad, consectetur aliquam dolore ipsam vel?
+            Asperiores. Illum molestias maiores amet error explicabo,
+            voluptatibus id ratione nemo animi iusto? Non modi, quibusdam
+            reiciendis nostrum sit est blanditiis voluptatum laudantium
+            voluptatem minima, autem ex dolore minus. Qui, aspernatur? Error
+            cupiditate, sed provident dicta distinctio quaerat rem ipsam dolorem
+            porro! Maiores eos hic veritatis incidunt eveniet nostrum facilis
+            eligendi sed? Reprehenderit laboriosam ut deserunt a commodi facere
+            assumenda id. Accusantium odit unde fugit. Magnam nemo expedita a
+            fugit delectus deserunt doloribus sed quo quia alias ipsum
+            voluptatem debitis consectetur necessitatibus dolores, labore
+            voluptatibus laborum explicabo, sapiente architecto libero totam.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga
             aspernatur omnis magni, adipisci possimus quibusdam sit autem quam
             voluptate nulla laudantium, doloribus voluptatum incidunt aliquam
@@ -45,7 +68,25 @@
             voluptatibus laborum explicabo, sapiente architecto libero totam.
           </p>
           <center><h2 class="arthead" id="arthead2">Artikel 2</h2></center>
-          <p id="Artikel2">
+          <p class="artikel" id="Artikel2">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga
+            aspernatur omnis magni, adipisci possimus quibusdam sit autem quam
+            voluptate nulla laudantium, doloribus voluptatum incidunt aliquam
+            error neque. Fugit, culpa? Nihil nesciunt necessitatibus obcaecati,
+            corporis sequi tenetur quos laborum recusandae incidunt omnis
+            dolorem soluta ut facilis laudantium aliquid eveniet repellat eaque
+            porro architecto, ad, consectetur aliquam dolore ipsam vel?
+            Asperiores. Illum molestias maiores amet error explicabo,
+            voluptatibus id ratione nemo animi iusto? Non modi, quibusdam
+            reiciendis nostrum sit est blanditiis voluptatum laudantium
+            voluptatem minima, autem ex dolore minus. Qui, aspernatur? Error
+            cupiditate, sed provident dicta distinctio quaerat rem ipsam dolorem
+            porro! Maiores eos hic veritatis incidunt eveniet nostrum facilis
+            eligendi sed? Reprehenderit laboriosam ut deserunt a commodi facere
+            assumenda id. Accusantium odit unde fugit. Magnam nemo expedita a
+            fugit delectus deserunt doloribus sed quo quia alias ipsum
+            voluptatem debitis consectetur necessitatibus dolores, labore
+            voluptatibus laborum explicabo, sapiente architecto libero totam.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga
             aspernatur omnis magni, adipisci possimus quibusdam sit autem quam
             voluptate nulla laudantium, doloribus voluptatum incidunt aliquam
@@ -66,7 +107,25 @@
             voluptatibus laborum explicabo, sapiente architecto libero totam.
           </p>
           <center><h2 class="arthead" id="arthead3">Artikel 3</h2></center>
-          <p id="Artikel3">
+          <p class="artikel" id="Artikel3">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga
+            aspernatur omnis magni, adipisci possimus quibusdam sit autem quam
+            voluptate nulla laudantium, doloribus voluptatum incidunt aliquam
+            error neque. Fugit, culpa? Nihil nesciunt necessitatibus obcaecati,
+            corporis sequi tenetur quos laborum recusandae incidunt omnis
+            dolorem soluta ut facilis laudantium aliquid eveniet repellat eaque
+            porro architecto, ad, consectetur aliquam dolore ipsam vel?
+            Asperiores. Illum molestias maiores amet error explicabo,
+            voluptatibus id ratione nemo animi iusto? Non modi, quibusdam
+            reiciendis nostrum sit est blanditiis voluptatum laudantium
+            voluptatem minima, autem ex dolore minus. Qui, aspernatur? Error
+            cupiditate, sed provident dicta distinctio quaerat rem ipsam dolorem
+            porro! Maiores eos hic veritatis incidunt eveniet nostrum facilis
+            eligendi sed? Reprehenderit laboriosam ut deserunt a commodi facere
+            assumenda id. Accusantium odit unde fugit. Magnam nemo expedita a
+            fugit delectus deserunt doloribus sed quo quia alias ipsum
+            voluptatem debitis consectetur necessitatibus dolores, labore
+            voluptatibus laborum explicabo, sapiente architecto libero totam.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga
             aspernatur omnis magni, adipisci possimus quibusdam sit autem quam
             voluptate nulla laudantium, doloribus voluptatum incidunt aliquam
@@ -93,7 +152,7 @@
     <footer class="fotnav">
       <nav>
         <a href="/site/impresum.html">Impressum</a>
-        <a href="">Kontakt</a>
+        <a href="/site/kontakt.html">Kontakt</a>
       </nav>
     </footer>
   </body>
