--- a/site/anmeldung.html
+++ b/site/anmeldung.html
@@ -9,14 +9,15 @@
   </head>
   <body>
     <center>
-      <img
-        src="https://dewey.tailorbrands.com/production/brand_version_mockup_image/427/7857029427_75b0c7f5-7cc1-40bc-86e4-add9a6c82560.png?cb=1665758900"
-        alt="logo"
-        class="logo"
-      />
+      <a href="/site/haupt.html"
+        ><img
+          src="https://dewey.tailorbrands.com/production/brand_version_mockup_image/427/7857029427_75b0c7f5-7cc1-40bc-86e4-add9a6c82560.png?cb=1665758900"
+          alt="logo"
+          class="logo"
+      /></a>
     </center>
     <nav class="topnav">
-      <a href="/site/mainsite.html">Haupt</a>
+      <a href="/site/haupt.html">Haupt</a>
       <a href="/site/aktuelles.html">Aktuelles</a>
     </nav>
     <center><h1>Newsletter anmeldung</h1></center>
