--- a/site/kontakt.html
+++ b/site/kontakt.html
@@ -4,21 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styleimp.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylekon.css" media="screen" />
     <title>Site</title>
   </head>
   <body>
     <center>
-      <img
-        src="https://dewey.tailorbrands.com/production/brand_version_mockup_image/427/7857029427_75b0c7f5-7cc1-40bc-86e4-add9a6c82560.png?cb=1665758900"
-        alt="logo"
-        class="logo"
-      />
+      <a href="/site/haupt.html"
+        ><img
+          src="https://dewey.tailorbrands.com/production/brand_version_mockup_image/427/7857029427_75b0c7f5-7cc1-40bc-86e4-add9a6c82560.png?cb=1665758900"
+          alt="logo"
+          class="logo"
+      /></a>
     </center>
     <nav class="topnav">
-      <a href="/site/mainsite.html">Haupt</a>
+      <a href="/site/haupt.html">Haupt</a>
       <a href="/site/aktuelles.html">Aktuelles</a>
     </nav>
+
+    <main>
+      <div>
+        <center>
+          <h1 class="header">Kontakt</h1>
+          <p class="text">Kundenservice:</p>
+          <p class="text">
+            E-Mail:
+            <a href="mailto:info@chiemgau48.net">info@chiemgau48.net</a><br />
+            Telefon: 048 - 6 48 90<br /><br />
+          </p>
+        </center>
+      </div>
+    </main>
 
     <footer class="fotnav">
       <nav>
