--- a/siteXHTML/impresum.html
+++ b/siteXHTML/impresum.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang="de">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -63,7 +64,7 @@
     <footer class="fotnav">
       <nav>
         <a href="/workspacestudio/site/impresum.html">Impressum</a>
-        <a href="/workspacestudio/site/kontakt.html">Kontakt</a>
+        <a href="">Kontakt</a>
       </nav>
     </footer>
   </body>
