--- a/site/artikel1.html
+++ b/site/artikel1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styleimp.css" media="screen" />
-    <title>Site</title>
+    <title>Artikel 1</title>
   </head>
   <body>
     <center>
@@ -16,17 +16,15 @@
           class="logo"
       /></a>
     </center>
-    <nav>
-      <div class="nav">
-        <a href="/site/haupt.html" class="NavText" id="HaText">Hauptseite</a>
-        <a href="/site/aktuelles.html" class="NavText" id="AkText">Aktuelles</a>
-      </div>
+    <nav class="topnav">
+      <a href="/site/haupt.html">Haupt</a>
+      <a href="/site/aktuelles.html">Aktuelles</a>
     </nav>
 
     <footer class="fotnav">
       <nav>
-        <a href="/site/impresum.html" class="fotText">Impressum</a>
-        <a href="/site/Kontakt.html" class="fotText">Kontakt</a>
+        <a href="/site/impresum.html">Impressum</a>
+        <a href="">Kontakt</a>
       </nav>
     </footer>
   </body>
