--- a/site/blank.html
+++ b/site/blank.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styleimp.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="test.css" media="screen" />
     <title>Site</title>
   </head>
   <body>
@@ -26,7 +26,7 @@
     <footer class="fotnav">
       <nav>
         <a href="/site/impresum.html" class="fotText">Impressum</a>
-        <a href="/site/Kontakt.html" class="fotText">Kontakt</a>
+        <a href="/site/kontakt.html" class="fotText">Kontakt</a>
       </nav>
     </footer>
   </body>
