--- a/site/haupt.html
+++ b/site/haupt.html
@@ -15,12 +15,14 @@
         class="logo"
       />
     </center>
-    <nav class="topnav">
-      <a href="/workspacestudio/site/mainsite.html">Haupt</a>
-      <a href="/workspacestudio/site/aktuelles.html">Aktuelles</a>
+    <nav>
+      <div class="nav">
+        <a href="/site/haupt.html" class="NavText" id="HaText">Hauptseite</a>
+        <a href="/site/aktuelles.html" class="NavText" id="AkText">Aktuelles</a>
+      </div>
     </nav>
     <div>
-      <a href="/workspacestudio/site/anmeldung.html"
+      <a href="/site/anmeldung.html"
         ><button class="login">Newsletter Anmeldung</button></a
       >
     </div>
@@ -151,8 +153,8 @@
 
     <footer class="fotnav">
       <nav>
-        <a href="/workspacestudio/site/impresum.html">Impressum</a>
-        <a href="/workspacestudio/site/kontakt.html">Kontakt</a>
+        <a href="/site/impresum.html" class="fotText">Impressum</a>
+        <a href="/site/kontakt.html" class="fotText">Kontakt</a>
       </nav>
     </footer>
   </body>
