--- a/site/impresum.html
+++ b/site/impresum.html
@@ -5,20 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styleimp.css" media="screen" />
-    <title>Site</title>
+    <title>Impressum</title>
   </head>
   <body>
     <center>
-      <a href="/workspacestudio/site/haupt.html"
+      <a href="/site/haupt.html"
         ><img
           src="https://dewey.tailorbrands.com/production/brand_version_mockup_image/427/7857029427_75b0c7f5-7cc1-40bc-86e4-add9a6c82560.png?cb=1665758900"
           alt="logo"
           class="logo"
       /></a>
     </center>
-    <nav class="topnav">
-      <a href="/workspacestudio/site/haupt.html">Haupt</a>
-      <a href="/workspacestudio/site/aktuelles.html">Aktuelles</a>
+    <nav>
+      <div class="nav">
+        <a href="/site/haupt.html" class="NavText" id="HaText">Hauptseite</a>
+        <a href="/site/aktuelles.html" class="NavText" id="AkText">Aktuelles</a>
+      </div>
     </nav>
     <main>
       <div class="impdiv">
@@ -62,8 +64,8 @@
 
     <footer class="fotnav">
       <nav>
-        <a href="/workspacestudio/site/impresum.html">Impressum</a>
-        <a href="/workspacestudio/site/kontakt.html">Kontakt</a>
+        <a href="/site/impresum.html" class="fotText">Impressum</a>
+        <a href="/site/kontakt.html" class="fotText">Kontakt</a>
       </nav>
     </footer>
   </body>
