--- a/site/testResponsive.html
+++ b/site/testResponsive.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="test.css" media="screen" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="testResponsive.css"
+      media="screen"
+    />
     <title>Site</title>
   </head>
   <body>
