--- a/site/aktuelles.html
+++ b/site/aktuelles.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styleimp.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylenav.css" media="screen" />
     <title>Site</title>
   </head>
   <body>
