--- a/site/haupt.html
+++ b/site/haupt.html
@@ -34,50 +34,55 @@
           <article>
             <h2 class="header">Artikel 1</h2>
             <div class="artikel">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Accusamus, et aliquam autem harum dicta non voluptates
-              exercitationem quo, mollitia, nobis similique. Fugit porro quas
-              veritatis, dolor ea minus repellat similique. Totam hic error
-              accusantium aspernatur praesentium rerum, doloremque id alias aut
-              debitis mollitia consequuntur a incidunt ex delectus unde omnis
-              ducimus perspiciatis nihil ab molestias aliquid consectetur non
-              laborum? Laudantium? Aperiam ipsam sunt totam temporibus maxime et
-              nulla quam veritatis magnam dolorem, laboriosam numquam neque
-              reprehenderit nihil nemo, quis qui animi ratione vitae aliquam
-              eaque? Optio a adipisci non aliquid? Corrupti cumque quod, quia
-              tempore, ullam est deserunt iure amet aperiam ipsam, iusto eveniet
-              autem in! Veniam eveniet vitae facilis commodi nulla ducimus
-              voluptate libero, recusandae tenetur ut quia saepe! Nulla, non
-              placeat perspiciatis eius veniam mollitia nihil repellendus
-              perferendis nam quibusdam voluptatum nesciunt eveniet obcaecati
-              aut, exercitationem iure cupiditate labore dignissimos totam,
-              quisquam sunt iusto. Nulla soluta ipsum reiciendis? Soluta nam
-              porro, cupiditate rerum quos repudiandae ducimus, cumque error
-              aperiam doloribus voluptates voluptatem odit vel assumenda tenetur
-              atque! Maxime accusantium consequatur laudantium, ipsum quia
-              aspernatur fugit ipsa aliquid voluptatibus.Lorem ipsum dolor sit,
-              amet consectetur adipisicing elit. Accusamus, et aliquam autem
-              harum dicta non voluptates exercitationem quo, mollitia, nobis
-              similique. Fugit porro quas veritatis, dolor ea minus repellat
-              similique. Totam hic error accusantium aspernatur praesentium
-              rerum, doloremque id alias aut debitis mollitia consequuntur a
-              incidunt ex delectus unde omnis ducimus perspiciatis nihil ab
-              molestias aliquid consectetur non laborum? Laudantium? Aperiam
-              ipsam sunt totam temporibus maxime et nulla quam veritatis magnam
-              dolorem, laboriosam numquam neque reprehenderit nihil nemo, quis
-              qui animi ratione vitae aliquam eaque? Optio a adipisci non
-              aliquid? Corrupti cumque quod, quia tempore, ullam est deserunt
-              iure amet aperiam ipsam, iusto eveniet autem in! Veniam eveniet
-              vitae facilis commodi nulla ducimus voluptate libero, recusandae
-              tenetur ut quia saepe! Nulla, non placeat perspiciatis eius veniam
-              mollitia nihil repellendus perferendis nam quibusdam voluptatum
-              nesciunt eveniet obcaecati aut, exercitationem iure cupiditate
-              labore dignissimos totam, quisquam sunt iusto. Nulla soluta ipsum
-              reiciendis? Soluta nam porro, cupiditate rerum quos repudiandae
-              ducimus, cumque error aperiam doloribus voluptates voluptatem odit
-              vel assumenda tenetur atque! Maxime accusantium consequatur
-              laudantium, ipsum quia aspernatur fugit ipsa aliquid voluptatibus.
+              <a href="/site/artikel1.html" class="text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Accusamus, et aliquam autem harum dicta non voluptates
+                exercitationem quo, mollitia, nobis similique. Fugit porro quas
+                veritatis, dolor ea minus repellat similique. Totam hic error
+                accusantium aspernatur praesentium rerum, doloremque id alias
+                aut debitis mollitia consequuntur a incidunt ex delectus unde
+                omnis ducimus perspiciatis nihil ab molestias aliquid
+                consectetur non laborum? Laudantium? Aperiam ipsam sunt totam
+                temporibus maxime et nulla quam veritatis magnam dolorem,
+                laboriosam numquam neque reprehenderit nihil nemo, quis qui
+                animi ratione vitae aliquam eaque? Optio a adipisci non aliquid?
+                Corrupti cumque quod, quia tempore, ullam est deserunt iure amet
+                aperiam ipsam, iusto eveniet autem in! Veniam eveniet vitae
+                facilis commodi nulla ducimus voluptate libero, recusandae
+                tenetur ut quia saepe! Nulla, non placeat perspiciatis eius
+                veniam mollitia nihil repellendus perferendis nam quibusdam
+                voluptatum nesciunt eveniet obcaecati aut, exercitationem iure
+                cupiditate labore dignissimos totam, quisquam sunt iusto. Nulla
+                soluta ipsum reiciendis? Soluta nam porro, cupiditate rerum quos
+                repudiandae ducimus, cumque error aperiam doloribus voluptates
+                voluptatem odit vel assumenda tenetur atque! Maxime accusantium
+                consequatur laudantium, ipsum quia aspernatur fugit ipsa aliquid
+                voluptatibus.Lorem ipsum dolor sit, amet consectetur adipisicing
+                elit. Accusamus, et aliquam autem harum dicta non voluptates
+                exercitationem quo, mollitia, nobis similique. Fugit porro quas
+                veritatis, dolor ea minus repellat similique. Totam hic error
+                accusantium aspernatur praesentium rerum, doloremque id alias
+                aut debitis mollitia consequuntur a incidunt ex delectus unde
+                omnis ducimus perspiciatis nihil ab molestias aliquid
+                consectetur non laborum? Laudantium? Aperiam ipsam sunt totam
+                temporibus maxime et nulla quam veritatis magnam dolorem,
+                laboriosam numquam neque reprehenderit nihil nemo, quis qui
+                animi ratione vitae aliquam eaque? Optio a adipisci non aliquid?
+                Corrupti cumque quod, quia tempore, ullam est deserunt iure amet
+                aperiam ipsam, iusto eveniet autem in! Veniam eveniet vitae
+                facilis commodi nulla ducimus voluptate libero, recusandae
+                tenetur ut quia saepe! Nulla, non placeat perspiciatis eius
+                veniam mollitia nihil repellendus perferendis nam quibusdam
+                voluptatum nesciunt eveniet obcaecati aut, exercitationem iure
+                cupiditate labore dignissimos totam, quisquam sunt iusto. Nulla
+                soluta ipsum reiciendis? Soluta nam porro, cupiditate rerum quos
+                repudiandae ducimus, cumque error aperiam doloribus voluptates
+                voluptatem odit vel assumenda tenetur atque! Maxime accusantium
+                consequatur laudantium, ipsum quia aspernatur fugit ipsa aliquid
+                voluptatibus.
+              </a>
             </div>
+
             <h2 class="header">Artikel 2</h2>
             <div class="artikel">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
