--- a/site/tests/testfooter.html
+++ b/site/tests/testfooter.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="stylean.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylenav.css" media="screen" />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="testfooter.css"
+      media="screen"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="stylenavtest.css"
+      media="screen"
+    />
     <link
       rel="stylesheet"
       type="text/css"
       href="fontawesome/css/all.min.css"
       media="screen"
     />
-    <title>Newsletter anmeldung</title>
+    <title>Impressum</title>
   </head>
-  <body>
+  <div class="box"><body>
     <center>
       <a href="/site/haupt.html"
         ><img
@@ -29,46 +40,49 @@
         <a href="/site/aktuelles.html" class="NavText" id="AkText">Aktuelles</a>
       </div>
     </nav>
+    <main>
+      <div class="impdiv">
+        <h1 class="h1">Impressum</h1>
 
-    <div>
-      <form>
-        <fieldset class="center">
-          <center>
-            <legend>
-              <center><div class="anm">Newsletter anmeldung</div></center>
-            </legend>
-            <label for="Vorname">Vorname:</label>
-            <input type="Text" name="vorname" /><br />
-            <label for="Nachname">Nachname:</label>
-            <input type="Text" name="Nachname" /><br />
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" /> <br />
-            <label for="plz">PLZ:</label>
-            <input type="number" name="PLZ" /><br />
-            <label for="Stadt">Stadt:</label>
-            <input type="Text" name="Stadt" /><br />
-            <label for="Straße">Straße/Hausnr:</label>
-            <input type="Text" name="Straße" /><br />
-            <label for="Geburtsdatum">Geburtsdatum</label>
-            <input type="date" name="Geburtsdatum" /><br />
-            <label for="Passwort">Passwort</label>
-            <input type="password" name="passwort" /><br />
-            <label for="Alter">Ü18?</label>
-            <select name="Alter" id="Alter" required>
-              <option value="Ja">Ja</option>
-              <option value="Nein">Nein</option>
-            </select>
-            <br />
-            <label for="Profilbild">Profilbild:</label>
-            <input type="file" name="Profilbild" id="Profilbild" />
-
-            <a href=""><input type="submit" value="Anmelden" class="reg" /></a>
-          </center>
-        </fieldset>
-      </form>
-    </div>
-
+        <section class="sec">
+          <div>
+            <h2>Vertreten durch:</h2>
+            <p>Geschäftsführung:<br />Max Musterführer</p>
+            <p>Max Mustervorsitzender (Beiratsvorsitzender)</p>
+            <p>Umsatzsteueridentifikationsnummer: DE 123456789</p>
+          </div>
+          <div>
+            <h2>Verantwortlich für den Inhalt:</h2>
+            <p>
+              Chiemgau 48 GmBH<br />Chiemgauer Straße 48<br />48488 Chiemgau
+            </p>
+            <p>
+              Telefon: 048 - 6 48 90<br />Fax: 048 - 65 65 37 00<br />E-Mail:#
+              <a href="mailto:info@chiemgau48.net">info@chiemgau48.net</a><br />
+            </p>
+          </div>
+          <div>
+            <h2>Beschwerden/Streitschlichtung:</h2>
+            <p>
+              Die EU-Kommission bietet die Möglichkeit zur
+              Online-Streitbeilegung auf einer von ihr betriebenen
+              Online-Plattform. Diese Plattform ist über den externen Link
+              <a
+                title="http://ec.europa.eu/consumers/odr/"
+                href="http://ec.europa.eu/consumers/odr/"
+                target="_blank"
+                >http://ec.europa.eu/consumers/odr/</a
+              >
+              zu erreichen.
+            </p>
+          </div>
+        </section>
+      </div>
+    </main>
     <footer class="ft">
+
+
+
       <section class="ft-main">
         <div class="ft-main-item">
           <h2 class="ft-title">Über</h2>
@@ -78,7 +92,7 @@
             <li><a href="#">Team</a></li>
           </ul>
         </div>
-
+       
         <div class="ft-main-item">
           <h2 class="ft-title">Service</h2>
           <ul>
@@ -88,15 +102,19 @@
         </div>
         <div class="ft-main-item">
           <h2 class="ft-title">Benachrichtige mich!</h2>
-          <p>
-            Wir schicken dir eine Email sobald ein neuer Artikel online kommt.
-          </p>
+          <p>Wir schicken dir eine Email sobald ein neuer Artikel online kommt.</p>
           <form>
-            <input type="email" name="email" placeholder="ihre@email.de" />
+            <input
+              type="email"
+              name="email"
+              placeholder="ihre@email.de"
+            />
             <input type="submit" value="Absenden" />
           </form>
         </div>
       </section>
+
+
 
       <section class="ft-social">
         <ul class="ft-social-list">
@@ -114,9 +132,7 @@
             ></a>
           </li>
           <li>
-            <a href="https://github.com/namedmichi/workspacestudio"
-              ><i class="fab fa-github"></i
-            ></a>
+            <a href="https://www.github.com"><i class="fab fa-github"></i></a>
           </li>
           <li>
             <a href="https://www.linkedin.com"
@@ -124,12 +140,13 @@
             ></a>
           </li>
           <li>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-              ><i class="fab fa-youtube"></i
-            ></a>
+            <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
           </li>
         </ul>
       </section>
+
+
+
 
       <section class="ft-legal">
         <ul class="ft-legal-list">
@@ -139,6 +156,7 @@
           <li>&copy; 2022 Copyright Chiemgau48</li>
         </ul>
       </section>
-    </footer>
+    </footer></div>
+  
   </body>
 </html>
