--- a/site/aktuelles.html
+++ b/site/aktuelles.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styleimp.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylenav.css" media="screen" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="fontawesome/css/all.min.css"
+      media="screen"
+    />
     <title>Site</title>
   </head>
   <body>
@@ -24,11 +30,82 @@
       </div>
     </nav>
 
-    <footer class="fotnav">
-      <nav>
-        <a href="/site/impresum.html" class="fotText">Impressum</a>
-        <a href="/site/Kontakt.html" class="fotText">Kontakt</a>
-      </nav>
+    <main>
+      <center><h1 style="font-size: 300px">LEER</h1></center>
+      <center><h1 style="font-size: 300px">LEER</h1></center>
+    </main>
+
+    <footer class="ft">
+      <section class="ft-main">
+        <div class="ft-main-item">
+          <h2 class="ft-title">Über</h2>
+          <ul>
+            <li><a href="#">Verantwortliche</a></li>
+            <li><a href="#">Karriere</a></li>
+            <li><a href="#">Team</a></li>
+          </ul>
+        </div>
+
+        <div class="ft-main-item">
+          <h2 class="ft-title">Service</h2>
+          <ul>
+            <li><a href="/site/kontakt.html">Kontakt</a></li>
+            <li><a href="#">Werbung</a></li>
+          </ul>
+        </div>
+        <div class="ft-main-item">
+          <h2 class="ft-title">Benachrichtige mich!</h2>
+          <p>
+            Wir schicken dir eine Email sobald ein neuer Artikel online kommt.
+          </p>
+          <form>
+            <input type="email" name="email" placeholder="ihre@email.de" />
+            <input type="submit" value="Absenden" />
+          </form>
+        </div>
+      </section>
+
+      <section class="ft-social">
+        <ul class="ft-social-list">
+          <li>
+            <a href="https://www.facebook.com"
+              ><i class="fab fa-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com"
+              ><i class="fab fa-instagram"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://github.com/namedmichi/workspacestudio"
+              ><i class="fab fa-github"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+              ><i class="fab fa-youtube"></i
+            ></a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="ft-legal">
+        <ul class="ft-legal-list">
+          <li><a href="#">Allgemeine Geschäftsbedingungen</a></li>
+          <li><a href="#">Datenschutz</a></li>
+          <li><a href="/site/impresum.html">Impressum</a></li>
+          <li>&copy; 2022 Copyright Chiemgau48</li>
+        </ul>
+      </section>
     </footer>
   </body>
 </html>
