--- a/site/tests/artikel1test.html
+++ b/site/tests/artikel1test.html
@@ -14,6 +14,12 @@
     <link
     rel="stylesheet"
     type="text/css"
+    href="stylenavtest.css"
+    media="screen"
+  />
+  <link
+    rel="stylesheet"
+    type="text/css"
     href="fontawesome/css/all.min.css"
     media="screen"
   />
@@ -240,8 +246,10 @@
         </div>
       </div>
     </main>
-
     <footer class="ft">
+
+
+
       <section class="ft-main">
         <div class="ft-main-item">
           <h2 class="ft-title">Über</h2>
@@ -251,7 +259,7 @@
             <li><a href="#">Team</a></li>
           </ul>
         </div>
-
+       
         <div class="ft-main-item">
           <h2 class="ft-title">Service</h2>
           <ul>
@@ -261,15 +269,19 @@
         </div>
         <div class="ft-main-item">
           <h2 class="ft-title">Benachrichtige mich!</h2>
-          <p>
-            Wir schicken dir eine Email sobald ein neuer Artikel online kommt.
-          </p>
+          <p>Wir schicken dir eine Email sobald ein neuer Artikel online kommt.</p>
           <form>
-            <input type="email" name="email" placeholder="ihre@email.de" />
+            <input
+              type="email"
+              name="email"
+              placeholder="ihre@email.de"
+            />
             <input type="submit" value="Absenden" />
           </form>
         </div>
       </section>
+
+
 
       <section class="ft-social">
         <ul class="ft-social-list">
@@ -287,7 +299,7 @@
             ></a>
           </li>
           <li>
-            <a href="https://github.com/namedmichi/workspacestudio"><i class="fab fa-github"></i></a>
+            <a href="https://www.github.com"><i class="fab fa-github"></i></a>
           </li>
           <li>
             <a href="https://www.linkedin.com"
@@ -295,10 +307,13 @@
             ></a>
           </li>
           <li>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
           </li>
         </ul>
       </section>
+
+
+
 
       <section class="ft-legal">
         <ul class="ft-legal-list">
@@ -308,6 +323,6 @@
           <li>&copy; 2022 Copyright Chiemgau48</li>
         </ul>
       </section>
-    </footer>
+    </footer></div>
   </body>
 </html>
