--- a/test/svgtest.html
+++ b/test/svgtest.html
@@ -35,7 +35,7 @@
             <stop offset="100%" style="stop-color:#21007F; stop-opacity:1" />
           </linearGradient>
         <rect width="100%" height="300"  style="fill:url(#grad2);stroke-width:1;stroke:rgb(255, 0, 0)" />
-        </rect>
+        <p>Text</p> </rect>
       </svg>
       
         
