--- a/site/aktuelles.html
+++ b/site/aktuelles.html
@@ -16,17 +16,26 @@
   </head>
   <body>
     <center>
-      <a href="/site/haupt.html"
-        ><img
-          src="https://dewey.tailorbrands.com/production/brand_version_mockup_image/427/7857029427_75b0c7f5-7cc1-40bc-86e4-add9a6c82560.png?cb=1665758900"
-          alt="logo"
-          class="logo"
-      /></a>
+      <div class="nv-logo">
+        <a href="/site/haupt.html">
+          <img
+            src="https://dewey.tailorbrands.com/production/brand_version_mockup_image/427/7857029427_75b0c7f5-7cc1-40bc-86e4-add9a6c82560.png?cb=1665758900"
+            alt="logo"
+            class="logo"
+          />
+        </a>
+      </div>
     </center>
     <nav>
-      <div class="nav">
-        <a href="/site/haupt.html" class="NavText" id="HaText">Hauptseite</a>
-        <a href="/site/aktuelles.html" class="NavText" id="AkText">Aktuelles</a>
+      <div class="nv">
+        <div class="nv-leiste">
+          <div class="nv-haupt">
+            <a href="/site/haupt.html"><p class="nv-text">Hauptseite</p></a>
+          </div>
+          <div class="nv-aktuell">
+            <a href="/site/haupt.html"><p class="nv-text">Aktuelles</p></a>
+          </div>
+        </div>
       </div>
     </nav>
 
