--- a/site/artikel1.html
+++ b/site/artikel1.html
@@ -237,16 +237,12 @@
             </div>
           </div>
           <div class="container-artikel">
-            <div class="artikel-header-list">
-              <div class="artikel-header-container">
-                <center><h2 class="artikel-header">Artikel 2</h2></center>
-              </div>
-              <div class="artikel-header-container">
-                <center><h2 class="artikel-header">Artikel 3</h2></center>
-              </div>
-            </div>
-            <div class="artikel-link-list">
+            <div class="artikeln">
+              <center><h2 class="artikel-header">Artikel 2</h2></center>
               <div class="artikel-link">Test</div>
+            </div>
+            <div class="artikeln">
+              <center><h2 class="artikel-header">Artikel 3</h2></center>
               <div class="artikel-link">Test</div>
             </div>
           </div>
