--- a/testschule/fest.html
+++ b/testschule/fest.html
@@ -8,7 +8,7 @@
     <title>Feste Seite</title>
   </head>
   <body>
-    <div class="head">
+    <div class="hintergrund">
       <center>
         <div class="content">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia
