--- a/testschule/rem.html
+++ b/testschule/rem.html
@@ -8,13 +8,12 @@
   </head>
   <body>
     <center>
-      <p>font-size 16px.</p>
-
-      <div id="top-div">
-        Parent div font-size 2rem; padding 1rem
+      <p>font-size Standard(16px)</p>
+      <div class="top-div">
+        Parent div font-size 2rem(32px); padding 1rem(16px)
         <div class="div">
-          font-size 3em; padding 2em
-          <div class="in-div">font-size 2rem</div>
+          font-size 2em(64px); padding 64px
+          <div class="in-div">font-size 2rem(32px)</div>
         </div>
       </div>
     </center>
