--- a/testschule/rem.html
+++ b/testschule/rem.html
@@ -9,11 +9,11 @@
   <body>
     <center>
       <p>font-size Standard(16px)</p>
-      <div class="top-div">
+      <div class="großeltern">
         Parent div font-size 2rem(32px); padding 1rem(16px)
-        <div class="div">
+        <div class="eltern">
           font-size 2em(64px); padding 64px
-          <div class="in-div">font-size 2rem(32px)</div>
+          <div class="kind">font-size 2rem(32px)</div>
         </div>
       </div>
     </center>
