--- a/testschule/rem.html
+++ b/testschule/rem.html
@@ -12,7 +12,7 @@
       <div class="großeltern">
         Parent div font-size 2rem(32px); padding 1rem(16px)
         <div class="eltern">
-          font-size 2em(64px); padding 64px
+          font-size 2em(64px); padding 1em(64px)
           <div class="kind">font-size 2rem(32px)</div>
         </div>
       </div>
