--- a/site/artikel1.html
+++ b/site/artikel1.html
@@ -49,7 +49,7 @@
       </nav>
     <main>
       <div class="wrapper">
-        <div class="wrapper-box">
+        <div class="container">
           <div class="container-inhalt">
             <div class="container-ueber">
               <div class="ueber">
