--- a/testschule/fluid.html
+++ b/testschule/fluid.html
@@ -8,7 +8,6 @@
     <title>Fluide Seite</title>
   </head>
   <body>
- 
     <center>
       <div class="content">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia
@@ -24,7 +23,7 @@
         Aut enim, tempore ipsam nemo excepturi eos quis cupiditate ratione ut
         quibusdam iure repellat, mollitia corporis atque voluptatibus ea? Soluta
         placeat sequi beatae ratione, dicta iste commodi harum labore quae!
-        Officiis praesentium et, explicabo itaque laborum molestias quis quaerat
+        Officiis praesentium et, explicabo itaque laborum molestias quis -
         voluptatum eveniet dignissimos doloremque laudantium nihil ipsam
         expedita voluptates quae laboriosam!
       </div>
