--- a/site/artikel1.html
+++ b/site/artikel1.html
@@ -48,15 +48,18 @@
         </div>
       </nav>
     <main>
+      <!-- Box mit 100% breite um Inhalte zu Zentrieren -->
       <div class="wrapper">
+        <!--  Container in dem die Inhalte sind, centered-->
         <div class="container">
           <div class="container-inhalt">
+            <!-- Container der Überschrift und datum Enthält, Grid layout-->
             <div class="container-ueber">
               <div class="ueber">
                 <center><h1>"HIER KÖNNTE IHR ARTIKEL STEHEN"</h1></center>
               </div>
               <div class="stand">
-                
+                Stand 12.11, Lesedauer 5min
               </div>
             </div>
 
