--- a/site/artikel1.html
+++ b/site/artikel1.html
@@ -62,13 +62,12 @@
                 Stand 12.11, Lesedauer 5min
               </div>
             </div>
-
+            <!-- Bild -->
             <div class="container-news">
               <center>
                 <img src="/site/news.webp" alt="news" class="news" />
               </center>
             </div>
-
             <p class="text" id="id">
               Veniam
               soluta maiores facilis sed autem deleniti ad magni illum esse
