--- a/site/artikel1.html
+++ b/site/artikel1.html
@@ -68,6 +68,7 @@
                 <img src="/site/news.webp" alt="news" class="news" />
               </center>
             </div>
+            <!-- Text -->
             <p class="text" id="id">
               Veniam
               soluta maiores facilis sed autem deleniti ad magni illum esse
@@ -106,6 +107,7 @@
                 <br>
                 <h2 class="head2">Voluptate ipsam</h2>
               </center>
+              <!-- Text -->
               <div class="text">
               Aliquid minima quia optio dolore, obcaecati ullam
               ipsum? Nisi reiciendis voluptate pariatur fugiat accusantium odio
@@ -190,6 +192,7 @@
               voluptatum placeat provident alias, voluptatem temporibus corporis
               fugiat labore aspernatur nisi velit
             </p>
+            <!-- Video -->
             <div class="container-video">
               <center>
                 <iframe
@@ -202,7 +205,7 @@
                 ></iframe>
               </center>
             </div>
-            
+            <!-- Text unter video-->
             <div class="unter-video">
               <center>
               <h2 class="head2">Quam, alias!</h2>
