--- a/site/aktuelles.html
+++ b/site/aktuelles.html
@@ -65,7 +65,7 @@
         <div class="ft-main-item">
           <h2 class="ft-title">Benachrichtige mich!</h2>
           <p>
-            Wir schicken dir eine Email sobald ein neuer Artikel online kommt.
+            Wir schicken dir eine Email sobald ein neuer Artikel online kommt..
           </p>
           <form>
             <input type="email" name="email" placeholder="ihre@email.de" />
