--- a/uebungen.23/google/google.html
+++ b/uebungen.23/google/google.html
@@ -18,10 +18,15 @@
     <header>
       <nav>
         <ul>
-          <li class="left-float">Über</li>
-          <li class="left-float">Weiters</li>
-          <li class="right-float">Gmail</li>
-          <li class="right-float">Account</li>
+          <li class="left-float li-text">Über</li>
+          <li class="left-float li-text">Weiters</li>
+          <li class="right-float">
+            <span class="pb-span">
+              <img class="pb" src="pb.png" alt="" />
+            </span>
+          </li>
+          <li class="right-float li-text">Gmail</li>
+          <li class="right-float li-text">Account</li>
         </ul>
       </nav>
     </header>
@@ -46,12 +51,7 @@
             ></span>
 
             <div class="search">
-              <input
-                class="search-input"
-                maxlength="2048"
-                name="q"
-                type="text"
-              />
+              <input class="search-input" type="text" />
             </div>
 
             <span class="cam">
@@ -79,15 +79,16 @@
       <div class="fotdiv">
         <div class="land">Deutschland</div>
         <div class="rechtliches">
-          <div class="rechtliches-abteil">
-            <div class="fo-text">Co2-neutral seit 2007</div>
+          <div class="rechtliches-abteil co2">
+            <div class="fo-text co2-text">CO₂-neutral seit 2007</div>
           </div>
-          <div class="rechtliches-abteil">
+          <div class="rechtliches-abteil left-float">
             <div class="fo-text">Werbeprogramm</div>
             <div class="fo-text">Unternehmen</div>
             <div class="fo-text">Wie funktioniert Google</div>
           </div>
-          <div class="rechtliches-abteil">
+
+          <div class="rechtliches-abteil right-float">
             <div class="fo-text">Datenschutz</div>
             <div class="fo-text">Nutzungbedingung</div>
             <div class="fo-text">Einstellungen</div>
